--- a/module/User/view/user/user/index.phtml
+++ b/module/User/view/user/user/index.phtml
@@ -7,8 +7,8 @@ $this->headTitle("Manutenção");
 <h1>Manutenção de usuários/alunos</h1>
 
 <p>
-    <a href="<?= $this->url('admin/users', ['action' => 'add']); ?>">
-        Novo usuário
+    <a href="<?= $this->url('admin/users', ['action' => 'add']); ?>" class="btn btn-warning btn-md">
+        <span class="glyphicon glyphicon-user"></span> Novo usuário
     </a>
 </p>
 
@@ -19,6 +19,7 @@ $this->headTitle("Manutenção");
         <th>Nome</th>
         <th>Email</th>
         <th>Telefone</th>
+        <th>Tipo</th>
         <th>Nível</th>
         <th>Status</th>
         <th>Ações</th>
@@ -33,28 +34,50 @@ $this->headTitle("Manutenção");
 
             <td>
                 <?php
-                  $queryBuilder = $entityManager->createQueryBuilder();
-                  $result = $queryBuilder->select('u, type')
-                      ->from(\User\Entity\User::class,'u')
-                      ->leftJoin('u.user_type','type')
-                      ->getQuery()
-                      ->getResult();
-                  dump($result);
-                  echo $this->escapeHtml($user->getUserType());
+                $queryBuilder = $entityManager->createQueryBuilder();
+                $result = $queryBuilder->select('ut')
+                    ->from(\User\Entity\UserType::class,'ut')
+                    ->andWhere("ut.userType = :usertype")
+                    ->setParameter('usertype', $user->getUserType())
+                    ->getQuery()
+                    ->getArrayResult();
+                echo $result[0][nameType];
                 ?>
             </td>
 
             <td>
-                <?= $this->escapeHtml($user->getUserLevel()); ?>
+                <?php
+                $queryBuilder = $entityManager->createQueryBuilder();
+                $result = $queryBuilder->select('ul')
+                    ->from(\User\Entity\UserLevel::class,'ul')
+                    ->andWhere("ul.userLevel = :userlevel")
+                    ->setParameter('userlevel', $user->getUserLevel())
+                    ->getQuery()
+                    ->getArrayResult();
+                echo $result[0][nameLevel];
+                ?>
             </td>
 
-            <td><?= $this->escapeHtml($user->getUserstatus()); ?></td>
             <td>
-                <a href="<?=$this->url('admin/users', ['action'=>'edit', 'id'=>$user->getUserkey()] );?>">
-                    Edit
+                <?php
+                $queryBuilder = $entityManager->createQueryBuilder();
+                $result = $queryBuilder->select('us')
+                    ->from(\User\Entity\UserStatus::class,'us')
+                    ->andWhere("us.userStatus = :userstatus")
+                    ->setParameter('userstatus', $user->getUserStatus())
+                    ->getQuery()
+                    ->getArrayResult();
+                echo $result[0][nameStatus];
+                ?>
+            </td>
+            <td>
+                <a href="<?=$this->url('admin/users', ['action'=>'edit', 'id'=>$user->getUserkey()] );?>"
+                   class="btn btn-info btn-sm">
+                    <span class="glyphicon glyphicon-edit"></span>
                 </a>
-                <a href="<?=$this->url('admin/users', ['action'=>'delete', 'id'=>$user->getUserkey()] );?>">
-                    Delete
+                <a href="<?=$this->url('admin/users', ['action'=>'delete', 'id'=>$user->getUserkey()] );?>"
+                   class="btn btn-danger btn-sm">
+                    <span class="glyphicon glyphicon-remove"></span>
                 </a>
             </td>
         </tr>
